[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/UI/CustomHSlider/CustomHSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Originals/pngs/UpButtonHighlighted.png" type="Texture" id=2]
[ext_resource path="res://Assets/Originals/pngs/UpButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/Originals/pngs/SellerLittleButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/Originals/pngs/SellerBigButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Originals/pngs/SBRatioLittleButton.png" type="Texture" id=6]
[ext_resource path="res://Assets/Originals/pngs/SBRatioBigButton.png" type="Texture" id=7]
[ext_resource path="res://Themes/MainTheme.tres" type="Theme" id=8]
[ext_resource path="res://Scenes/UI/SettingsPanel2/SettingsPanel2.gd" type="Script" id=9]
[ext_resource path="res://Scenes/UI/SettingsPanel2/SettingsPanel2MoveUp.tres" type="Animation" id=10]
[ext_resource path="res://Scenes/UI/SettingsPanel2/SettingsPanel2MoveDown.tres" type="Animation" id=11]
[ext_resource path="res://Assets/Sourced/Icons/fast-backward-button_48x48.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sourced/Icons/fast-forward-button_48x48.png" type="Texture" id=13]
[ext_resource path="res://Assets/Originals/pngs/BuyerRange.png" type="Texture" id=14]
[ext_resource path="res://Assets/Originals/pngs/SellerRange.png" type="Texture" id=15]
[ext_resource path="res://Assets/Originals/pngs/DownButton.png" type="Texture" id=16]
[ext_resource path="res://Assets/Originals/pngs/DownButtonHighlighted.png" type="Texture" id=17]

[node name="SettingsPanel2" type="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 302 )
theme = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.78174
margin_right = -1.78174
mouse_filter = 2
custom_constants/margin_right = 48
custom_constants/margin_top = 48
custom_constants/margin_left = 48
custom_constants/margin_bottom = 48
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 48.0
margin_top = 48.0
margin_right = 1872.0
margin_bottom = 259.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 96

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 864.0
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 48

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 864.0
margin_bottom = 112.0
custom_constants/separation = 32

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 112.0
hint_tooltip = "Buyer Max Range"
texture = ExtResource( 14 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 864.0
margin_bottom = 112.0
size_flags_horizontal = 3
custom_constants/separation = 48

[node name="BuyerSlider1" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 736.0
value = 40.0

[node name="BuyerSlider2" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 80.0
margin_right = 736.0
margin_bottom = 112.0
value = 100.0

[node name="RatioSlider" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 160.0
margin_right = 864.0
margin_bottom = 192.0
hint_tooltip = "Seller/Buyer Ratio"
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 6 )
value = 33.0
grabber = ExtResource( 6 )
grabber_highlight = ExtResource( 7 )

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 960.0
margin_right = 1824.0
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 48

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 864.0
margin_bottom = 112.0
custom_constants/separation = 32

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 96.0
margin_bottom = 112.0
hint_tooltip = "Seller Min Range"
texture = ExtResource( 15 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 128.0
margin_right = 864.0
margin_bottom = 112.0
size_flags_horizontal = 3
custom_constants/separation = 48

[node name="SellerSlider1" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 736.0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 4 )
grabber = ExtResource( 4 )
grabber_highlight = ExtResource( 5 )

[node name="SellerSlider2" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 80.0
margin_right = 736.0
margin_bottom = 112.0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 4 )
value = 60.0
grabber = ExtResource( 4 )
grabber_highlight = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 160.0
margin_right = 864.0
margin_bottom = 211.0
custom_constants/separation = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayoutButton" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 219.0
margin_bottom = 51.0
size_flags_horizontal = 3
text = "1 Circle"
items = [ "1 Circle", null, false, 0, null, "2 Circles", null, false, 1, null ]
selected = 0

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 267.0
margin_right = 487.0
margin_bottom = 51.0
size_flags_horizontal = 3
text = "Add 1"

[node name="SpeedDownButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
modulate = Color( 0.666667, 0.666667, 0.666667, 1 )
margin_left = 535.0
margin_right = 583.0
margin_bottom = 51.0
texture_normal = ExtResource( 12 )

[node name="SpeedLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 631.0
margin_top = 3.0
margin_right = 768.0
margin_bottom = 48.0
text = "Speed 1x"

[node name="SpeedUpButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
modulate = Color( 0.666667, 0.666667, 0.666667, 1 )
margin_left = 816.0
margin_right = 864.0
margin_bottom = 51.0
texture_normal = ExtResource( 13 )

[node name="UpButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownButton" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SettingsPanel2MoveDown = ExtResource( 11 )
anims/SettingsPanel2MoveUp = ExtResource( 10 )

[node name="HideDelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_SettingsPanel2_mouse_entered"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/BuyerSlider1" to="." method="_on_BuyerSlider1_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/BuyerSlider2" to="." method="_on_BuyerSlider2_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/RatioSlider" to="." method="_on_RatioSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/SellerSlider1" to="." method="_on_SellerSlider1_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/SellerSlider2" to="." method="_on_SellerSlider2_value_changed"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/LayoutButton" to="." method="_on_LayoutButton_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/SpeedDownButton" to="." method="_on_SpeedDownButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/SpeedUpButton" to="." method="_on_SpeedUpButton_pressed"]
[connection signal="pressed" from="UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="pressed" from="DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="timeout" from="HideDelayTimer" to="." method="_on_HideDelayTimer_timeout"]
